--- a/src/pages/tech/index.astro
+++ b/src/pages/tech/index.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 
-const collection = "projects";
+const collection = "tech";
 
 const posts = (await getCollection(collection)).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
