--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,8 @@ import { SITE_TITLE } from "../consts";
   <nav>
     <HeaderLink href="/">Home</HeaderLink>
     <HeaderLink href="/projects">Projects</HeaderLink>
-    <HeaderLink href="/blog">Blog</HeaderLink>
+    <HeaderLink href="/tech">Tech</HeaderLink>
+    <HeaderLink href="/life">Life</HeaderLink>
     <HeaderLink href="https://twitter.com/ValjeanClark" target="_blank">
       Twitter
     </HeaderLink>
