--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,7 +4,10 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 
-type Props = CollectionEntry<"blog">["data"];
+type Props =
+  | CollectionEntry<"projects">["data"]
+  | CollectionEntry<"tech">["data"]
+  | CollectionEntry<"life">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
