--- a/src/pages/life/[...slug].astro
+++ b/src/pages/life/[...slug].astro
@@ -3,13 +3,13 @@ import { CollectionEntry, getCollection } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
-  const posts = await getCollection("projects");
+  const posts = await getCollection("life");
   return posts.map((post) => ({
     params: { slug: post.slug },
     props: post,
   }));
 }
-type Props = CollectionEntry<"projects">;
+type Props = CollectionEntry<"life">;
 
 const post = Astro.props;
 const { Content } = await post.render();
