simplify website structure and duplicate layout files by combining all content into one collection with tags

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,9 +9,7 @@ import { SITE_TITLE } from "../consts";
   </h2>
   <nav>
     <HeaderLink href="/">Home</HeaderLink>
-    <HeaderLink href="/projects">Projects</HeaderLink>
-    <HeaderLink href="/tech">Tech</HeaderLink>
-    <HeaderLink href="/life">Life</HeaderLink>
+    <HeaderLink href="/blog">Blog</HeaderLink>
     <HeaderLink href="https://twitter.com/ValjeanClark" target="_blank">
       Twitter
     </HeaderLink>
