--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,84 +2,23 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-import { getCollection } from "astro:content";
-import FormattedDate from "../components/FormattedDate.astro";
-
-const projects = (await getCollection("projects")).sort(
-  (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
-const techPosts = (await getCollection("tech")).sort(
-  (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
-const lifePosts = (await getCollection("life")).sort(
-  (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
 ---
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    <style>
-      ul {
-        list-style-type: none;
-        padding: unset;
-      }
-      ul li {
-        display: flex;
-      }
-      ul li :global(time) {
-        flex: 0 0 130px;
-        font-style: italic;
-        color: #595959;
-      }
-      ul li a:visited {
-        color: #8e32dc;
-      }
-    </style>
   </head>
   <body>
     <Header />
     <main>
-      <section>
-        <h2>Projects</h2>
-        <ul>
-          {
-            projects.map((project) => (
-              <li>
-                <FormattedDate date={project.data.pubDate} />
-                <a href={`/projects/${project.slug}/`}>{project.data.title}</a>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-      <section>
-        <h2>Tech</h2>
-        <ul>
-          {
-            techPosts.map((post) => (
-              <li>
-                <FormattedDate date={post.data.pubDate} />
-                <a href={`/tech/${post.slug}/`}>{post.data.title}</a>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-      <section>
-        <h2>Life</h2>
-        <ul>
-          {
-            lifePosts.map((post) => (
-              <li>
-                <FormattedDate date={post.data.pubDate} />
-                <a href={`/life/${post.slug}/`}>{post.data.title}</a>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
+      <p>Hi, I'm Valjean. I live in San Francisco.</p>
+      <p>
+        I work in software. I love developer tools, design systems, maps, and
+        really any problem space that has challenging UI/UX problems (e.g. data
+        visualization, complex workflows, streaming data).
+      </p>
+      <p>I love the mountains, particularly off-trail adventures.</p>
     </main>
   </body>
 </html>
