add email address to header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,6 +16,9 @@ import { SITE_TITLE } from "../consts";
     <HeaderLink href="https://github.com/vbud" target="_blank">
       GitHub
     </HeaderLink>
+    <HeaderLink href="mailto:valjeanbud@gmail.com" target="_blank">
+      Email
+    </HeaderLink>
   </nav>
 </header>
 <style>
