--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,9 +5,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 
-const collection = await getCollection("blog");
-
-const posts = collection.sort(
+const posts = (await getCollection("blog")).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
