add RSS link to header

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,7 +3,7 @@
 // all pages through the use of the <BaseHead /> component.
 import "../styles/global.css";
 
-import { SITE_TITLE } from "../consts";
+import { SITE_TITLE, RSS_PATH } from "../consts";
 
 export interface Props {
   title: string;
@@ -30,7 +30,7 @@ const { title, description, image } = Astro.props;
   rel="alternate"
   type="application/rss+xml"
   title={SITE_TITLE}
-  href="/rss.xml"
+  href={RSS_PATH}
 />
 
 <!-- Primary Meta Tags -->
