--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,3 @@
-/* TODO: just keep the colors I want */
 :root {
   /* slates */
   --slate1: hsl(200, 7%, 8.8%);
@@ -31,8 +30,7 @@
 body {
   font-family: system-ui, sans-serif;
   margin: auto;
-  padding: 20px;
-  /* TODO: do I like this max width */
+  padding: 1.25rem;
   max-width: 65ch;
   text-align: left;
   background-color: var(--slate2);
@@ -74,23 +72,20 @@ img {
   max-width: 100%;
   height: auto;
 }
-/* TODO: test */
-code {
-  padding: 2px 5px;
-  background-color: var(--slate4);
-  font-family: menlo, monospace;
-}
 pre {
   padding: 1rem;
 }
 pre > code {
   all: unset;
 }
-/* TODO: test */
 blockquote {
-  border: 1px solid var(--slate10);
-  color: var(--slate11);
-  padding: 2px 0px 2px 20px;
+  border-left: 2px solid currentColor;
+  padding-left: 1.25rem;
   margin: 0px;
-  font-style: italic;
+}
+/* TODO: test */
+code {
+  padding: 2px 5px;
+  background-color: var(--slate4);
+  font-family: menlo, monospace;
 }
