updates to home page, head, and header links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from "../components/Header.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
@@ -18,7 +18,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
         really any problem space that has challenging UI/UX problems (e.g. data
         visualization, complex workflows, streaming data).
       </p>
-      <p>I love the mountains, particularly off-trail adventures.</p>
+      <p>
+        I spend a lot of time in the mountains. Recently I've been spending more
+        time off-trail. I also enjoy cycling, particularly gravel.
+      </p>
     </main>
   </body>
 </html>
