--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -42,7 +42,7 @@ const posts = (await getCollection("blog")).sort(
     <Header />
     <main>
       {
-        ["projects", "tech", "life"].map((tag) => (
+        ["tech", "life", "projects"].map((tag) => (
           <section>
             <h2>{tag}</h2>
             <ul>
