--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,19 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
         visualization, complex workflows, streaming data).
       </p>
       <p>
-        I spend a lot of time in the mountains. Recently I've been spending more
-        time off-trail. I also enjoy cycling, particularly gravel.
+        I spend a lot of time hiking in the mountains. Recently I've been
+        spending more time off-trail. I also enjoy cycling, particularly gravel.
+        I also enjoy writing.
+      </p>
+      <p>
+        Sadly, I had an ACL reconstruction in 2019 that was performed
+        incorrectly, and I've been dealing with the consequences of that ever
+        since. I am often unable to hike or ride my bicycle. I have had 4 knee
+        surgeries and unfortunately I will need more. A lot of my time outside
+        of work is spent learning about knee injuries and trying to find ways to
+        improve my situation. Somehow, I remain curious and engaged, even though
+        my particular outcome is quite bad, which is why you see a lot of
+        knee-related content in my blog :).
       </p>
     </main>
   </body>
