--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,18 +16,18 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
       <p>
         I work in software. I love developer tools, design systems, maps, and
         really any problem space that has challenging UI/UX problems (e.g. data
-        visualization, complex workflows, streaming data).
+        visualization, complex workflows, streaming data, code editors).
       </p>
       <p>
-        I spend a lot of time hiking in the mountains. Recently I've been
-        spending more time off-trail. I also enjoy cycling, particularly gravel.
-        I also enjoy writing.
+        I love hiking in the mountains. Recently, I've been spending more time
+        off-trail. I also enjoy cycling, particularly gravel. I also enjoy
+        writing.
       </p>
       <p>
         Sadly, I had an ACL reconstruction in 2019 that was performed
         incorrectly, and I've been dealing with the consequences of that ever
         since. I am often unable to hike or ride my bicycle. I have had 4 knee
-        surgeries and unfortunately I will need more. A lot of my time outside
+        surgeries and, unfortunately, I will need more. A lot of my time outside
         of work is spent learning about knee injuries and trying to find ways to
         improve my situation. Somehow, I remain curious and engaged, even though
         my particular outcome is quite bad, which is why you see a lot of
